<resources>
    <string name="app_name">Give Lives</string>
    <string name="name_chat">ChatActivity</string>
    <string name="name_auth_ui">Auth UI demo</string>
    <string name="name_image">Storage Image Demo</string>
    <string name="desc_chat">Demonstrates using a FirebaseRecyclerAdapter to load data from Firebase Database into a RecyclerView for a basic chat app.</string>
    <string name="desc_auth_ui">Demonstrates the Firebase Auth UI flow, with customization options.</string>
    <string name="desc_image">Demonstrates displaying an image from Cloud Storage using Glide.</string>
    <string name="launch_title">FirebaseUI Auth Demo</string>
    <string name="sign_in">Login now</string>
    <string name="green_theme">Green Theme</string>
    <string name="purple_theme">Purple Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="use_theme_header">Use theme:</string>
    <string name="logo_header">Logo:</string>
    <string name="firebase_logo_label">Firebase Auth</string>
    <string name="google_logo_label">Google</string>
    <string name="no_logo_label">None</string>
    <string name="auth_providers_header">Use auth providers:</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="facebook_label">Facebook</string>
    <string name="facebook_label_missing_config">Facebook - configuration missing</string>
    <string name="twitter_label">Twitter</string>
    <string name="twitter_label_missing_config">Twitter - configuration missing</string>
    <string name="google_label">Google</string>
    <string name="google_label_missing_config">Google - configuration missing</string>
    <string name="google_tos_label">Google TOS</string>
    <string name="firebase_tos_label">Firebase TOS</string>
    <string name="google_privacy_label">Google Privacy Policy</string>
    <string name="firebase_privacy_label">Firebase Privacy Policy</string>
    <string name="tos_header">Terms of Service URL:</string>
    <string name="privacy_policy_header">Privacy Policy URL:</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="default_theme">Default theme</string>
    <string name="configuration_required">Configuration is required - see README.md</string>
    <string name="other_options_header">Other Options:</string>
    <string name="rational_image_perm">This sample will read an image from local storage to upload to Cloud Storage.</string>
    <string name="anonymous_auth_failed_msg">Anonymous authentication failed, various components of the demo will not work. Make sure your device is online and that Anonymous Auth is configured in your Firebase project(https://console.firebase.google.com/project/_/authentication/providers)</string>
    <string name="extra_google_scopes">Example extra Google scopes</string>
    <string name="drive_file_scope">Drive File</string>
    <string name="youtube_data_scope">Youtube data</string>
    <string name="extra_facebook_scopes">Example extra Facebook scopes</string>
    <string name="friends">Friends</string>
    <string name="photos">Photos</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="send">Send</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="choose_image">Choose Image</string>
    <string name="accessibility_downloaded_image">Downloaded image</string>
    <string name="allow_new_email_acccount">Allow account creation if email does not exist.</string>
    <string name="start_chatting">No messages. Start chatting at the bottom!</string>
    <string name="signed_in">Signed In</string>
    <string name="enable_credential_selector">Enable Smart Lock\'s credential selector</string>
    <string name="enable_hint_selector">Enable Smart Lock\'s hint selector</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="edit_post">Edit Post</string>
    <string name="done">done</string>
    <string name="new_blood_request">New Blood Request</string>
    <string name="blood_hint_name">Recipient\'s full name*</string>
    <string name="blood_err_name">Enter recipient\'s full name</string>
    <string name="blood_hint_city">City*</string>
    <string name="blood_err_city">Enter recipient\'s city</string>
    <string name="blood_hint_transfusion_place">Place of Tranfusion*</string>
    <string name="blood_err_tranfusion_place">Enter recipient\'s proposed hospital</string>
    <string name="blood_hint_phone">Phone number</string>
    <string name="blood_err_phone">Enter recipient\'s phone number</string>
    <string name="blood_hint_date">Date of transfusion*</string>
    <string name="blood_err_date">Enter date of transfusion</string>
    <string name="blood_hint_time">Time of transfusion*</string>
    <string name="blood_err_time">Enter time of transfusion</string>
    <string name="blood_hint_bloodgroup">Blood type*</string>
    <string name="blood_err_bloodgroup">Enter recipient\'s blood group</string>
    <string name="blood_hint_quantity">Blood quantity (ml)*</string>
    <string name="blood_err_quantity">Enter the desired quantity </string>
    <string name="blood_hint_msg">Other info</string>
    <string name="blood_err_msg">Enter your message</string>
    <string name="pick_a_date">PICK A DATE</string>
    <string name="pick_a_time">PICK A TIME</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_requests">My requests</string>
    <string name="donate_now">Donate Now</string>
    <string name="blood_request">Blood Requests</string>
    <string name="blood_request_detail">Request Details</string>
    <string name="new_request">New Request</string>
    <string name="heading_blood">Blood</string>
    <string name="heading_organ">Organ/Tissue</string>
    <string name="heading_happier">Well Being</string>
    <string name="new_organ_request">New Organ Request</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core         functionality.</string>
    <string name="settings">Settings</string>
    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this feature. Fix in Settings.</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Address: %2$s</i>
    ]]>
    </string>
    <string name="transfusion_place_empty">Please enter place of transfusion</string>
    <string name="permission_rationale_location">Access to the location service is required to
        demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This feature requires location permission to enable
        the \'my location\' layer. Please try again and grant access to use the location.\nIf the
        permission has been permanently denied, it can be enabled from the
        System Settings &gt; Apps &gt; \'Give Lives\'.</string>
    <string name="permission_required_toast">Location permission is required for this feature.</string>
    <string name="reverse_donation">Reverse Donation</string>
    <string name="blood_type_warning">
    <![CDATA[
        The patient\'s blood type is <b><i>%1$s</i></b>
        <br/>
        Please confirm your blood type, phone number, amount of blood you can donate
        (usually 250-500ml) and other information (if applicable) below:
    ]]>
    </string>
    <string name="blood_donor_amount">Donation amount (ml)*</string>
    <string name="donor_name">Donor\'s full name</string>
    <string name="dialog_reverse_donation">Are you sure you want to cancel your donation?</string>
    <string name="blood_mandated_phone">Phone number*</string>
    <string name="blood_hint_organ_tissue">Select organ/tissue for transplantation*</string>
    <string name="heart_checkBox">Heart</string>
    <string name="lungs_checkBox">Lung</string>
    <string name="liver_checkBox">Liver</string>
    <string name="kidneys_checkBox">Kidney</string>
    <string name="intestine_checkBox">Intestine</string>
    <string name="pancreas_checkBox">Pancreas</string>
    <string name="heart_valves_checkBox">Heart valves and other heart tissue</string>
    <string name="bone_checkBox">Bone</string>
    <string name="tendons_checkBox">Tendon</string>
    <string name="ligaments_checkBox">Ligament</string>
    <string name="skin_checkBox">Skin</string>
    <string name="cornea_checkBox">Cornea</string>
    <string name="sclera_checkBox">Sclera</string>
    <string name="incompatible_blood_type">Sorry! Your blood type is not compatible</string>
    <string name="organ_request_detail">Request Details</string>
    <string name="organ_donation_warning">
    <![CDATA[
        Please notice that organ trading/trafficking is an offence.
        <br/>
        The patient\'s blood type is <b><i>%1$s</i></b>
        <br/>
        Please confirm your blood type (not applicable to Skin transplantation), phone number,
        and other information (if applicable) below:
    ]]>
    </string>
    <string name="organ_hint_place">Proposed Clinic/Hospital</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
</resources>