<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <!-- Layout for content is here. This can be a RelativeLayout  -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/blood_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/blood_hint_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blood_hint_name"
                    android:inputType="textCapWords"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/blood_hint_transfusion_place"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:textSize="16sp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium">

                <fragment
                    android:id="@+id/blood_hint_place"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/place_details"
                android:autoLink="all"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/place_attribution"
                android:autoLink="all"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_medium" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/blood_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/blood_hint_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blood_hint_phone"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/constraintDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/blood_layout_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/blood_hint_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/blood_hint_date"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:focusable="false"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/pick_a_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_a_date"
                    android:textColor="@color/blue"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/blood_layout_date" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/constraintTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/blood_layout_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/blood_hint_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/blood_hint_time"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:focusable="false"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/pick_a_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_a_time"
                    android:textColor="@color/blue"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/blood_layout_time" />

            </android.support.constraint.ConstraintLayout>
            <!--blood group-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blood_hint_bloodgroup"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/blood_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/blood_layout_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/blood_hint_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blood_hint_quantity"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/blood_layout_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/blood_hint_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blood_hint_msg"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
