<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!-- Layout for content is here. This can be a RelativeLayout  -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/donate_instr_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:textSize="16sp"
                tools:text="@string/organ_donation_warning"/>

            <!--blood type-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:textSize="16sp"
                android:text="@string/blood_hint_bloodgroup"/>
            <Spinner
                android:id="@+id/blood_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

          <!--  <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_donor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/donor_name"
                    android:inputType="textCapWords"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blood_mandated_phone"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_donor_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blood_hint_msg"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
